src/main/webapp/common-css/common.css
@CHARSET "ISO-8859-1";

body {
	font: 62.5% "Trebuchet MS", sans-serif; #
	border-top: 8px solid #f90; #
	border-bottom: 8px solid #f90;
	margin-left: 20px;
	margin-right: 20px;
	margin-top: 10px;
}

#wrapper {
	margin-bottom: 8px;
}

#tabs {
	margin-top: 10px;
	margin-bottom: 10px;
	#height: 595px;
	overflow: hidden;
}

#header {
	min-height: 50px;
	height:100px;
	border-bottom: 8px solid #f90;
	background-color: #999;
	border-top-right-radius: 4px;
	border-top-left-radius: 4px;
}

#header h2 {
	color: white;
	font-size: 22px;
	margin-top: 0px;
	margin-left: 20px;
	float: left;
	position: relative;
    top: 20px;
}
#logout a {
	color: white;
	padding: 20px;
	float: right;
	font-size: 15px;
	cursor: pointer;
	text-decoration: none !important;
}

#welcome {
	color: white;
	padding: 20px;
	float: left;
	font-size: 15px;
}

#footer {
	width: 100%;
	border-top: 8px solid #f90;
	height: 100px;
	position: relative;
	border-bottom-right-radius: 4px;
	border-bottom-left-radius: 4px;
	bottom: 0;
	left: 0;
	background-color: #999;
}

#footermiddle {
	#width: 1000px;
	#margin: auto;
}

.footercolumn1 {
	width: 32%;
	float: left;
	color: white;
	font-size: 15px;
	padding-top: 40px;
	margin-left: 100px;
}
.footercolumn2 {
	width: 28%;
	float: left;
	color: white;
	font-size: 15px;
	padding-top: 40px;
	#margin-left: 100px;
}
.footercolumn3 {
	width: 20%;
	float: left;
	color: white;
	font-size: 15px;
	padding-top: 40px;
	#margin-left: 100px;
}

.clear {
	clear: both;
}

.dataTable {
	font-size: 12px;
	color: #363758;
}

